<resources>
    <string name="app_name">BPL</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="Forget_password">Forget Password ?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="role">Role :</string>
    <string name="photographer">Photographer :</string>
    <string name="Customer">Customer :</string>
    <string name="already_have_an_account">Already have an account? Log in</string>

    <string name="profile1">Andrew Taylor</string>
    <string name="profile2">Williams Harris</string>
    <string name="profile3">Sanna Miller</string>
    <string name="profile4">Sophia Clarke</string>
    <string name="profile5">David Wood</string>
    <string name="profile1email">andrewtaylor@gmail.com</string>
    <string name="profile2email">williamsharries@gmail.com</string>
    <string name="profile3email">sannamiller@gmail.com</string>
    <string name="profile4email">sophiaclarke@gmail.com</string>
    <string name="profile5email">davidwood@gmail.com</string>


    <string name="profile6">James Anderson</string>
    <string name="profile7">George Walker</string>
    <string name="profile8">Abigail Steven</string>
    <string name="profile9">Mary Smith</string>
    <string name="profile10">Nick Lewis</string>
    <string name="profile11">Ella Burton</string>
    <string name="profile12">Abby Walker</string>
    <string name="profile13">Leo Robinson</string>
    <string name="profile14">Julian Jones</string>
    <string name="profile15">Nicolas Smith</string>
    <string name="profile6email">jamesanderson@gmail.com</string>
    <string name="profile7email">georgewalker@gmail.com</string>
    <string name="profile8email">abigailsteven@gmail.com</string>
    <string name="profile9email">marysmith@gmail.com</string>
    <string name="profile10email">nicklewis@gmail.com</string>
    <string name="profile11email">ellaburton@gmail.com</string>
    <string name="profile12email">abbywalker@gmail.com</string>
    <string name="profile13email">leorobinson@gmail.com</string>
    <string name="profile14email">julianjones@gmail.com</string>
    <string name="profile15email">nicolssmith@gmail.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_suggestion">Suggestions</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_share">Share</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_nav">BPL</string>
    <string name="menu_appname">Best Photoshoot Location Founder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_phoographer">PhoographerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_splashscreen">splashscreen</string>
    <string name="title_activity_profile">profile</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_image">image</string>

</resources>