<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_menu_booking"
            android:title="@string/menu_booking" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_menu_wishlist"
            android:title="@string/menu_wishlist" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>