<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/bottom_suggestion"
            android:icon="@drawable/suggestions"
            android:title="@string/menu_suggestion" />
        <item
            android:id="@+id/bottom_booking"
            android:icon="@drawable/ic_menu_booking"
            android:title="@string/menu_booking" />
        <item
            android:id="@+id/bottom_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/bottom_wishlist"
            android:icon="@drawable/ic_menu_wishlist"
            android:title="@string/menu_wishlist" />
        <item
            android:id="@+id/bottom_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
</menu>
